[feat]: Update main.cpp
- ImGUI[Docking-Experimental]으로 변경.
- main.cpp에 도킹 테스트 코드 추가.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+# NomadEngine CMake Configuration
+# This file sets up the build configuration for the NomadEngine project.
+
 cmake_minimum_required(VERSION 3.20)
 project(NomadEngine)
 
@@ -7,7 +10,6 @@ project(NomadEngine)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Ensure 64-bit compilation
 if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
     message(FATAL_ERROR "This project requires 64-bit compilation.")
 endif()
@@ -30,7 +32,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-# External library paths
 set(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/Sources/External)
 set(EXTERNAL_INCLUDES ${EXTERNAL_DIR}/Includes)
 set(EXTERNAL_LIBS_DEBUG ${EXTERNAL_DIR}/Libraries/Debug)
@@ -39,13 +40,105 @@ set(EXTERNAL_BINARIES_DEBUG ${EXTERNAL_DIR}/Binaries/Debug)
 set(EXTERNAL_BINARIES_RELEASE ${EXTERNAL_DIR}/Binaries/Release)
 
 # ================================================
+# External Libraries
+# ================================================
+
+# DirectX
+add_library(DirectX INTERFACE)
+target_include_directories(DirectX SYSTEM INTERFACE
+    ${EXTERNAL_INCLUDES}/directx
+    ${EXTERNAL_INCLUDES}/directx-dxc
+    ${EXTERNAL_INCLUDES}/directxtk12
+)
+target_link_libraries(DirectX INTERFACE
+    d3d12
+    dxgi
+    dxguid
+    d3dcompiler
+)
+
+# SDL3
+add_library(SDL3 INTERFACE)
+target_include_directories(SDL3 SYSTEM INTERFACE ${EXTERNAL_INCLUDES}/SDL3)
+target_link_libraries(SDL3 INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/SDL3-static.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/SDL3-static.lib>
+)
+
+# ImGui
+add_library(ImGui INTERFACE)
+target_include_directories(ImGui SYSTEM INTERFACE ${EXTERNAL_INCLUDES})
+target_link_libraries(ImGui INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/imguid.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/imgui.lib>
+)
+
+# ImGuizmo
+add_library(ImGuizmo INTERFACE)
+target_link_libraries(ImGuizmo INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/imguizmo.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/imguizmo.lib>
+)
+
+# FreeType
+add_library(FreeType INTERFACE)
+target_include_directories(FreeType SYSTEM INTERFACE ${EXTERNAL_INCLUDES}/freetype)
+target_link_libraries(FreeType INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/freetyped.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/freetype.lib>
+)
+
+# PlutoSVG
+add_library(PlutoSVG INTERFACE)
+target_link_libraries(PlutoSVG INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/plutosvg.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/plutosvg.lib>
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/plutovg.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/plutovg.lib>
+)
+
+# PNG
+add_library(PNG INTERFACE)
+target_link_libraries(PNG INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/libpng16d.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/libpng16.lib>
+)
+
+# Zlib
+add_library(Zlib INTERFACE)
+target_link_libraries(Zlib INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/zlibd.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/zlib.lib>
+)
+
+# Brotli
+add_library(Brotli INTERFACE)
+target_link_libraries(Brotli INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/brotlidec.lib>
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/brotlicommon.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/brotlidec.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/brotlicommon.lib>
+)
+
+# bzip2
+add_library(bzip2 INTERFACE)
+target_link_libraries(bzip2 INTERFACE
+    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/bz2d.lib>
+    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/bz2.lib>
+)
+
+# GameInput
+add_library(GameInput INTERFACE)
+target_link_libraries(GameInput INTERFACE gameinput)
+
+# ================================================
 # Source Files
 # ================================================
 file(GLOB_RECURSE SOURCES
-    "Sources/Editor/*.cpp"
     "Sources/Editor/*.h"
-    "Sources/Runtime/*.cpp"
+    "Sources/Editor/*.cpp"
     "Sources/Runtime/*.h"
+    "Sources/Runtime/*.cpp"
 )
 
 # ================================================
@@ -53,7 +146,6 @@ file(GLOB_RECURSE SOURCES
 # ================================================
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-# Target properties
 set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED ON
@@ -61,74 +153,34 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     WIN32_EXECUTABLE FALSE
 )
 
-# Compile definitions
 target_compile_definitions(${PROJECT_NAME} PRIVATE
     SDL_MAIN_HANDLED
     WIN32_LEAN_AND_MEAN
     NOMINMAX
 )
 
-# Include directories
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_SOURCE_DIR}/Sources/Runtime
     ${CMAKE_SOURCE_DIR}/Sources/Editor
+    ${CMAKE_SOURCE_DIR}/Sources/Resources
     ${EXTERNAL_INCLUDES}
 )
 
-# Add SDL3 specific include path
-target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE
-    ${EXTERNAL_INCLUDES}/SDL3
-)
-
 # ================================================
-# Libraries
+# Link Libraries
 # ================================================
-target_link_libraries(${PROJECT_NAME}
-    # SDL3 library
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/SDL3-static.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/SDL3-static.lib>
-
-    # ImGui library and its dependencies
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/imguid.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/imgui.lib>
-
-    # ImGuizmo
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/imguizmo.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/imguizmo.lib>
-
-    # FreeType
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/freetyped.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/freetype.lib>
-
-    # PlutoSVG and PlutoVG
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/plutosvg.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/plutosvg.lib>
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/plutovg.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/plutovg.lib>
-
-    # libpng
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/libpng16d.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/libpng16.lib>
-
-    # zlib
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/zlibd.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/zlib.lib>
-
-    # brotli
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/brotlidec.lib>
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/brotlicommon.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/brotlidec.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/brotlicommon.lib>
-
-    # bzip2
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/bz2d.lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/bz2.lib>
-
-    # OpenGL
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/OpenGL32.Lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/OpenGL32.Lib>
-    $<$<CONFIG:Debug>:${EXTERNAL_LIBS_DEBUG}/GlU32.Lib>
-    $<$<CONFIG:Release>:${EXTERNAL_LIBS_RELEASE}/GlU32.Lib>
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    DirectX
+    SDL3
+    ImGui
+    ImGuizmo
+    FreeType
+    PlutoSVG
+    PNG
+    Zlib
+    Brotli
+    bzip2
+    GameInput
 
     # Windows system libraries
     user32 gdi32 winmm imm32 ole32 oleaut32
@@ -138,12 +190,11 @@ target_link_libraries(${PROJECT_NAME}
 # ================================================
 # Post-build Actions
 # ================================================
-# Copy required DLLs
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "$<$<CONFIG:Debug>:${EXTERNAL_BINARIES_DEBUG}/dxcompiler.dll>"
     "$<$<CONFIG:Release>:${EXTERNAL_BINARIES_RELEASE}/dxcompiler.dll>"
-    $<TARGET_FILE_DIR:${PROJECT_NAME}>
+    "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
     COMMENT "Copying DirectX Compiler DLL"
 )
 
@@ -151,6 +202,6 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "$<$<CONFIG:Debug>:${EXTERNAL_BINARIES_DEBUG}/dxil.dll>"
     "$<$<CONFIG:Release>:${EXTERNAL_BINARIES_RELEASE}/dxil.dll>"
-    $<TARGET_FILE_DIR:${PROJECT_NAME}>
+    "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
     COMMENT "Copying DXIL DLL"
 )
